# minimax

./: .gitignore  .gitmodules  README.md  cljfmt.edn  deps.edn
dev/: build.clj
minimax_c/: .gitignore  CMakeLists.txt
minimax_c/resources/shaders/: bgfx_shader.sh  fs_geometry.sc  fs_picking.sc  fs_test.sc  shaderlib.sh  shadow.sh  varying.def.sc  vs_shadow.sc
minimax_c/scripts/: shaders
minimax_c/src/: allocator.cpp  allocator.h  combine_pass.h  core.cpp  dbg.h  deferred.h  fs.cpp  fs.h  geometry_pass.h  glfw_listeners.cpp  glfw_listeners.h  mesh.cpp  mesh.h  model.cpp  model.h  program.cpp  program.h  render_pass.h  scene.cpp  scene.h  state.cpp  state.h  ui.h  ui_pass.h
resources/models/: castle.glb
resources/shaders/: fs_combine.sc  fs_geometry.sc  fs_geometry_inst.sc  fs_line.sc  fs_shadow.sc  fs_ui.sc  fxaa.sh  shadow.sh  ssao.sh  varying.def.sc  vs_combine.sc  vs_geometry.sc  vs_geometry_inst.sc  vs_line.sc  vs_ui.sc
resources/shaders/check_2d/: varying.def.sc  vs_basic2d.sc
resources/shaders/check_3d/: varying.def.sc  vs_basic3d.sc
resources/shaders/shadow_pd/: fs_shadow_pd.sc  varying.def.sc  vs_shadow_pd.sc
resources/shaders_out/dx11/: fs_basic2d.bin.disasm  fs_combine.bin.disasm  fs_geometry.bin.disasm  fs_line.bin.disasm  fs_picking.bin.disasm  fs_shadow.bin.disasm  fs_shadow_pd.bin.disasm  vs_basic2d.bin.disasm  vs_combine.bin.disasm  vs_geometry.bin.disasm  vs_line.bin.disasm  vs_shadow.bin.disasm  vs_shadow_pd.bin.disasm
scripts/: fmt  fmt.nu  shaders  shaders.nu  start  start.nu
src/: data_readers.clj
src/bgfx/: core.clj
src/check/: check_util.clj  empty.clj  empty2.clj  test1.clj  triangle_2d.clj
src/fg/: clock.clj  core.clj  deferred.clj  dev.clj  empty.clj  empty2.clj  listeners.clj  material.clj  model.clj  passes.clj  shader.clj  state.clj  test1.clj  ui.clj
src/fg/passes/: combine.clj  geometry.clj  picking.clj  shadow.clj
src/fg/ui/: core.clj  debug.clj
src/minimax/: attachment.clj  clock.clj  debug.clj  frame_buffer.clj  glfw.clj  index_buffer.clj  lib.clj  logger.clj  mem.clj  object.clj  passes.clj  pool.clj  program.clj  resources.clj  shader.clj  state.clj  texture.clj  ui.clj  uniform.clj  vertex_buffer.clj  vertex_layout.clj  view.clj
src/minimax/assimp/: mesh.clj  texture.clj
src/minimax/audio/: context.clj  core.clj  source.clj  utils.clj
src/minimax/glfw/: core.clj  listeners.clj
src/minimax/objects/: camera.clj  group.clj  light.clj  mesh.clj  scene.clj
src/minimax/physics/: core.clj
src/minimax/pool/: core.clj  dynamic.clj  static.clj
src/minimax/renderer/: attachment.clj  deferred.clj  frame_buffer.clj  index_buffer.clj  instancing.clj  program.clj  shader.clj  texture.clj  ui.clj  uniform.clj  vertex_buffer.clj  vertex_layout.clj  view.clj
src/minimax/ui/: animation.clj  components.clj  context.clj  diff.clj  elements.clj  elements2.clj  primitives.clj  primitives2.clj  utils.clj
(+2 files in other folders)
